# SIGMOD2025Contest-Kirara

./: .gitignore  ANNOUNCEMENTS.md  CMakeLists.txt  README.md
.github/workflows/: main.yaml
include/: attribute.h  hardware__cp03.h  hardware__ga02.h  hardware__nx06.h  plan.h  statement.h  table.h
src/: Barrier.hpp  DataStructure.hpp  HashMap.hpp  HashMapCache.hpp  JoinOrderOptimizer.hpp  MemoryPool.hpp  Operator.hpp  Profiler.hpp  SharedState.hpp  ThreadPool.h  build_table.cpp  execute.cpp  statement.cpp
src/morsel_lite/: buffer.hpp  column_partition.hpp  column_vectors.hpp  concurrent_segment_vector.hpp  data_chunck.hpp  defs.hpp  execution_context.hpp  hash.hpp  hash_tables.hpp  intrinsics.hpp  page.hpp  pipeline.hpp  scheduler.hpp  utils.hpp
tests/: build_database.cpp  read_sql.cpp  unit_tests.cpp
